--- a/src/Components/Header/Header.css
+++ b/src/Components/Header/Header.css
@@ -1,22 +1,20 @@
-/* .logo {
-  object-fit: cover;
-  margin-left: 1.5rem;
-  height: 4rem;
-  width: 3rem;
-  cursor: pointer;
-} */
+.logo {
+  width: 15%;
+  object-fit: contain;
+  aspect-ratio: 1;
+}
 
 .image-container {
-  max-width: 300px; /* Set the maximum width for the container */
-  max-height: 200px; /* Set the maximum height for the container */
+  max-width: 300px;
+  max-height: 200px; 
   overflow: hidden; 
-  cursor: pointer;/* Hide any overflow to prevent breaking the layout */
+  cursor: pointer;
 }
 
 .image-container img {
-  width: 100%; /* Make the image fill the container's width */
-  height: 4.75rem; /* Maintain the aspect ratio */
-  display: block; /* Remove any extra spacing beneath the image */
+  width: 100%; 
+  height: 4.75rem; 
+  display: block;
 }
 
 .custom-navbar {
@@ -35,9 +33,6 @@
 
 @media(max-width: 576px) {
   .logo {
-    margin-left: 0rem;
-    max-width: 100%;
-    width: 65px;
-    height: 42px;
+    aspect-ratio: 0.75;
   }
 }
